--- a/index.html
+++ b/index.html
@@ -6,68 +6,105 @@
     <title>Complete Trello Clone with Full Editing</title>
     <style>
         :root { --main-bg: #f4f5f7; --list-bg: #ebecf0; --text-dark: #172b4d; --text-light: #5e6c84; --card-bg: #ffffff; --btn-primary: #0079bf; --btn-success: #5aac44; --btn-danger: #cf513d; --border-color: #dfe1e6;}
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background-color: var(--main-bg); margin: 0; padding: 20px; }
-        .main-container { display: flex; flex-direction: column; height: calc(100vh - 40px); }
-        .top-bar { padding-bottom: 20px; display: flex; align-items: center; }
-        .board-title { color: var(--text-dark); margin: 0; padding: 5px; cursor: pointer; }
-        .controls { margin-left: auto; }
-        .btn { background-color: var(--btn-primary); color: white; border: none; padding: 8px 12px; border-radius: 3px; cursor: pointer; margin-left: 10px; }
-        #board-container { display: flex; align-items: flex-start; gap: 20px; overflow-x: auto; flex-grow: 1; }
+        * { box-sizing: border-box; -webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: transparent; }
+        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background-color: var(--main-bg); margin: 0; padding: 12px; overflow: hidden; }
+        .main-container { display: flex; flex-direction: column; height: calc(100vh - 24px); }
+        .top-bar { padding-bottom: 12px; display: flex; align-items: center; flex-wrap: wrap; gap: 10px; }
+        .board-title { color: var(--text-dark); margin: 0; padding: 5px; cursor: pointer; font-size: 1.3em; flex-grow: 1; }
+        .controls { display: flex; gap: 8px; flex-wrap: wrap; margin-left: auto; }
+        .btn { background-color: var(--btn-primary); color: white; border: none; padding: 8px 12px; border-radius: 3px; cursor: pointer; font-size: 0.95em; white-space: nowrap; min-height: 36px; }
+        .btn:active { opacity: 0.8; }
+        #board-container { display: flex; align-items: flex-start; gap: 12px; overflow-x: auto; overflow-y: hidden; flex-grow: 1; -webkit-overflow-scrolling: touch; scroll-behavior: smooth; }
          
         /* LIST STYLES */
-        .list-wrapper { background-color: var(--list-bg); border-radius: 3px; width: 272px; flex-shrink: 0; padding: 10px; }
+        .list-wrapper { background-color: var(--list-bg); border-radius: 3px; width: 280px; min-width: 280px; flex-shrink: 0; padding: 8px; }
         .list-wrapper.list-dragging { opacity: 0.8; transform: rotate(2deg); }
-        .list-header { display: flex; justify-content: space-between; align-items: center; padding: 0 5px; margin-bottom: 10px; gap: 5px; cursor: move; }
+        .list-header { display: flex; justify-content: space-between; align-items: center; padding: 0 5px; margin-bottom: 8px; gap: 5px; cursor: move; }
         .list-title-wrapper { display: flex; align-items: center; gap: 8px; flex-grow: 1; min-width: 0; }
-        .list-title { font-weight: 600; color: var(--text-dark); flex-grow: 1; padding: 3px; cursor: text; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .card-count { font-size: 0.9em; font-weight: normal; color: var(--text-light); background-color: #091e4214; border-radius: 5px; padding: 2px 6px; }
-        .list-header-controls { display: flex; align-items: center; cursor: default; }
-        .list-color-picker { border: none; background: transparent; width: 24px; height: 24px; cursor: pointer; padding: 0; }
-        .action-btn { background: none; border: none; color: var(--text-light); cursor: pointer; font-size: 1.2em; padding: 0 5px; line-height: 1; }
-        .action-btn:hover { color: var(--text-dark); }
-        .delete-btn:hover { color: var(--btn-danger); }
-        .list-content { max-height: calc(100vh - 200px); overflow-y: auto; cursor: default; }
-        .inline-edit-input { font: inherit; border: 1px solid var(--btn-primary); border-radius: 3px; padding: 2px; width: 100%; box-sizing: border-box; }
-        h1 .inline-edit-input { font-size: 2em; }
+        .list-title { font-weight: 600; color: var(--text-dark); flex-grow: 1; padding: 3px; cursor: text; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 0.95em; }
+        .card-count { font-size: 0.85em; font-weight: normal; color: var(--text-light); background-color: #091e4214; border-radius: 5px; padding: 2px 6px; }
+        .list-header-controls { display: flex; align-items: center; cursor: default; gap: 2px; }
+        .list-color-picker { border: none; background: transparent; width: 28px; height: 28px; cursor: pointer; padding: 2px; border-radius: 3px; min-height: 36px; min-width: 36px; }
+        .action-btn { background: none; border: none; color: var(--text-light); cursor: pointer; font-size: 1.1em; padding: 6px; line-height: 1; border-radius: 3px; min-height: 36px; min-width: 36px; }
+        .action-btn:active { color: var(--text-dark); }
+        .delete-btn:active { color: var(--btn-danger); }
+        .list-content { max-height: calc(100vh - 250px); overflow-y: auto; cursor: default; -webkit-overflow-scrolling: touch; }
+        .inline-edit-input { font: inherit; border: 1px solid var(--btn-primary); border-radius: 3px; padding: 6px; width: 100%; box-sizing: border-box; font-size: 1em; -webkit-user-select: text; user-select: text; }
+        h1 .inline-edit-input { font-size: 1.3em; }
         .add-list-wrapper { cursor: default; }
-        .add-list-wrapper input { width: calc(100% - 12px); border: 1px solid #ccc; border-radius: 3px; padding: 5px; }
-        .add-list-wrapper button { background-color: var(--btn-success); margin-top: 5px; }
-        .list-placeholder { background-color: rgba(0,0,0,0.1); border-radius: 3px; width: 272px; flex-shrink: 0; height: 100px; }
+        .add-list-wrapper input { width: 100%; border: 1px solid #ccc; border-radius: 3px; padding: 8px; font-size: 1em; -webkit-user-select: text; user-select: text; }
+        .add-list-wrapper button { background-color: var(--btn-success); margin-top: 8px; }
+        .list-placeholder { background-color: rgba(0,0,0,0.1); border-radius: 3px; width: 280px; flex-shrink: 0; height: 100px; }
 
         /* CARD STYLES */
-        .card { background-color: var(--card-bg); border-radius: 3px; box-shadow: 0 1px 0 rgba(9,30,66,.25); padding: 10px; margin-bottom: 8px; cursor: pointer; }
+        .card { background-color: var(--card-bg); border-radius: 3px; box-shadow: 0 1px 0 rgba(9,30,66,.25); padding: 10px; margin-bottom: 8px; cursor: pointer; font-size: 0.95em; }
         .card.dragging { opacity: 0.5; transform: rotate(3deg); }
         .card-color-label { height: 8px; border-radius: 4px; margin-bottom: 8px; }
         .card-text { color: var(--text-dark); font-size: 14px; word-wrap: break-word; }
-        .card-footer { display: flex; align-items: center; margin-top: 10px; gap: 15px; }
+        .card-footer { display: flex; align-items: center; margin-top: 10px; gap: 12px; flex-wrap: wrap; }
         .checklist-summary { display: flex; align-items: center; gap: 5px; font-size: 12px; color: var(--text-light); }
-        .progress-bar { background-color: #091e4214; border-radius: 4px; height: 8px; flex-grow: 1; overflow: hidden; }
+        .progress-bar { background-color: #091e4214; border-radius: 4px; height: 8px; flex-grow: 1; overflow: hidden; min-width: 50px; }
         .progress-bar-inner { background-color: #526382; height: 100%; transition: width 0.3s; }
         .progress-bar-inner.completed { background-color: var(--btn-success); }
         
         /* MODAL STYLES */
-        .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: none; justify-content: center; align-items: center; z-index: 1000; }
-        .modal-content { background: var(--main-bg); padding: 25px; border-radius: 5px; width: 90%; max-width: 700px; max-height: 90vh; overflow-y: auto; }
-        .modal-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-        .modal-title { font-size: 1.5em; width: 100%; border: none; background: transparent; color: var(--text-dark); padding: 5px; }
-        .modal-close { font-size: 1.8em; cursor: pointer; border: none; background: transparent; }
-        .modal-section { margin-bottom: 20px; }
-        .modal-section h3 { color: var(--text-dark); margin-top: 0; }
-        .add-controls input, .add-controls select { width: 100%; box-sizing: border-box; padding: 5px; border: 1px solid #ccc; border-radius: 3px; margin-bottom: 5px; }
-        .add-btn { background-color: var(--btn-success); color: white; border: none; padding: 6px 10px; border-radius: 3px; cursor: pointer; }
-        .card-actions { display: flex; gap: 10px; align-items: center; flex-wrap: wrap; }
+        .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: none; justify-content: center; align-items: center; z-index: 1000; padding: 12px; }
+        .modal-content { background: var(--main-bg); padding: 20px; border-radius: 5px; width: 100%; max-width: 700px; max-height: 90vh; overflow-y: auto; -webkit-overflow-scrolling: touch; }
+        .modal-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; gap: 10px; }
+        .modal-title { font-size: 1.3em; width: 100%; border: none; background: transparent; color: var(--text-dark); padding: 5px; -webkit-user-select: text; user-select: text; }
+        .modal-close { font-size: 1.8em; cursor: pointer; border: none; background: transparent; padding: 4px 8px; border-radius: 3px; min-height: 36px; min-width: 36px; display: flex; align-items: center; justify-content: center; }
+        .modal-section { margin-bottom: 15px; }
+        .modal-section h3 { color: var(--text-dark); margin-top: 0; margin-bottom: 10px; font-size: 1em; }
+        .add-controls input, .add-controls select { width: 100%; box-sizing: border-box; padding: 8px; border: 1px solid #ccc; border-radius: 3px; margin-bottom: 8px; font-size: 1em; -webkit-user-select: text; user-select: text; }
+        .add-btn { background-color: var(--btn-success); color: white; border: none; padding: 8px 12px; border-radius: 3px; cursor: pointer; font-size: 0.95em; min-height: 36px; }
+        .card-actions { display: flex; gap: 8px; align-items: center; flex-wrap: wrap; }
         .card-actions .btn-danger { background-color: var(--btn-danger); }
-        .modal-checklist { background: #fff; border-radius: 3px; padding: 10px 12px; margin-bottom: 15px; border: 1px solid var(--border-color); }
-        .modal-checklist-header { display: flex; align-items: center; gap: 8px; padding-bottom: 8px; margin-bottom: 8px; border-bottom: 1px solid var(--border-color); }
-        .checklist-title-container { flex-grow: 1; cursor: pointer; }
-        .modal-checklist-header h4 { margin: 0; }
-        .checklist-progress-text { font-size: 0.9em; font-weight: normal; color: var(--text-light); }
-        .checklist-item { display: flex; align-items: center; padding: 2px 0; }
+        .modal-checklist { background: #fff; border-radius: 3px; padding: 12px; margin-bottom: 12px; border: 1px solid var(--border-color); }
+        .modal-checklist-header { display: flex; align-items: center; gap: 8px; padding-bottom: 8px; margin-bottom: 8px; border-bottom: 1px solid var(--border-color); flex-wrap: wrap; }
+        .checklist-title-container { flex-grow: 1; cursor: pointer; min-width: 200px; }
+        .modal-checklist-header h4 { margin: 0; font-size: 0.95em; }
+        .checklist-progress-text { font-size: 0.85em; font-weight: normal; color: var(--text-light); }
+        .checklist-item { display: flex; align-items: center; padding: 6px 0; }
         .checklist-item.done .checklist-item-text { text-decoration: line-through; color: var(--text-light); }
-        .checklist-item-text { flex-grow: 1; margin: 0 8px; padding: 3px; cursor: pointer; }
-        .checklist-item .action-btn { visibility: hidden; }
-        .checklist-item:hover .action-btn { visibility: visible; }
-        .template-list-item { display: flex; justify-content: space-between; align-items: center; padding: 8px; background-color: var(--card-bg); border: 1px solid var(--border-color); border-radius: 3px; margin-bottom: 8px; }
+        .checklist-item-text { flex-grow: 1; margin: 0 8px; padding: 3px; cursor: pointer; -webkit-user-select: text; user-select: text; }
+        .checklist-item .action-btn { visibility: hidden; font-size: 1em; }
+        .checklist-item:active .action-btn { visibility: visible; }
+        .template-list-item { display: flex; justify-content: space-between; align-items: center; padding: 10px; background-color: var(--card-bg); border: 1px solid var(--border-color); border-radius: 3px; margin-bottom: 8px; gap: 8px; }
+
+        /* MOBILE OPTIMIZATIONS */
+        @media (max-width: 768px) {
+            body { padding: 8px; }
+            .main-container { height: calc(100vh - 16px); }
+            .top-bar { padding-bottom: 10px; }
+            .board-title { font-size: 1.1em; }
+            .controls { margin-left: 0; width: 100%; }
+            .btn { padding: 10px; font-size: 0.9em; flex: 1; min-width: 0; }
+            .list-wrapper { width: 100%; max-width: 300px; }
+            .list-title { font-size: 0.9em; }
+            .modal-content { padding: 16px; }
+            .modal-title { font-size: 1.2em; }
+            .card-text { font-size: 13px; }
+        }
+        @media (max-width: 480px) {
+            body { padding: 6px; }
+            .main-container { height: calc(100vh - 12px); }
+            .top-bar { gap: 6px; padding-bottom: 8px; }
+            .board-title { font-size: 1em; margin-bottom: 8px; width: 100%; }
+            .controls { gap: 6px; }
+            .btn { padding: 8px 6px; font-size: 0.85em; }
+            #board-container { gap: 8px; }
+            .list-wrapper { width: 100%; padding: 6px; }
+            .list-header { margin-bottom: 6px; }
+            .list-content { max-height: calc(100vh - 280px); }
+            .card { padding: 8px; margin-bottom: 6px; }
+            .card-footer { gap: 8px; }
+            .modal-header { gap: 8px; }
+            .modal-content { padding: 12px; max-height: 95vh; }
+            .modal-section { margin-bottom: 12px; }
+            .modal-checklist { padding: 10px; }
+            .action-btn { padding: 4px; font-size: 1em; }
+            .list-color-picker { width: 24px; height: 24px; }
+        }
     </style>
 </head>
 <body>
