--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Complete Trello Clone with Full Editing</title>
     <style>
         :root { 
-            --main-bg: #0f172a; 
-            --list-bg: #1e293b; 
-            --text-dark: #f1f5f9; 
-            --text-light: #cbd5e1; 
-            --card-bg: #334155;
+            --main-bg: #f8fafc; 
+            --list-bg: #e2e8f0; 
+            --text-dark: #0f172a; 
+            --text-light: #475569; 
+            --card-bg: #ffffff;
             --btn-primary: #3b82f6; 
             --btn-success: #10b981; 
             --btn-danger: #ef4444; 
-            --border-color: #475569;
+            --border-color: #cbd5e1;
             --accent: #0ea5e9;
         }
         * { box-sizing: border-box; -webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: transparent; }
@@ -34,6 +34,7 @@
             border-bottom: 1px solid var(--border-color);
             background: var(--main-bg);
             flex-shrink: 0;
+            flex-wrap: wrap;
         }
         .board-title { 
             color: var(--text-dark); 
@@ -42,8 +43,12 @@
             cursor: pointer; 
             font-size: 1.5em;
             font-weight: 700;
-            flex: 1;
+            flex: 0 1 auto;
             min-width: 0;
+            max-width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         .controls { 
             display: flex; 
@@ -125,7 +130,7 @@
             border-radius: 4px;
             transition: background 0.2s ease;
         }
-        .list-title:hover { background: rgba(255, 255, 255, 0.05); }
+        .list-title:hover { background: rgba(0, 0, 0, 0.05); }
         .card-count { 
             font-size: 0.8em; 
             font-weight: 600; 
@@ -168,8 +173,8 @@
             align-items: center;
             justify-content: center;
         }
-        .action-btn:hover { color: var(--text-dark); background: rgba(255, 255, 255, 0.1); }
-        .action-btn:active { color: var(--text-dark); background: rgba(255, 255, 255, 0.1); }
+        .action-btn:hover { color: var(--text-dark); background: rgba(0, 0, 0, 0.05); }
+        .action-btn:active { color: var(--text-dark); background: rgba(0, 0, 0, 0.05); }
         .delete-btn:hover { color: var(--btn-danger); }
         .delete-btn:active { color: var(--btn-danger); }
         .list-content { 
@@ -237,7 +242,7 @@
             border: 1px solid var(--border-color);
             transition: all 0.2s ease;
         }
-        .card:hover { background-color: #475569; transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.4); }
+        .card:hover { background-color: #f1f5f9; transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
         .card:active { transform: scale(0.98); opacity: 0.9; }
         .card-color-label { height: 3px; border-radius: 3px; margin-bottom: 8px; }
         .card-text { 
@@ -337,8 +342,8 @@
             justify-content: center;
             transition: all 0.2s ease;
         }
-        .modal-close:hover { color: var(--text-dark); background: rgba(255, 255, 255, 0.1); }
-        .modal-close:active { color: var(--text-dark); background: rgba(255, 255, 255, 0.1); }
+        .modal-close:hover { color: var(--text-dark); background: rgba(0, 0, 0, 0.05); }
+        .modal-close:active { color: var(--text-dark); background: rgba(0, 0, 0, 0.05); }
         #modal-body { padding: 20px; flex: 1; overflow-y: auto; -webkit-overflow-scrolling: touch; }
         #template-manager-body { padding: 20px; }
         .modal-section { margin-bottom: 20px; }
@@ -388,7 +393,7 @@
         .card-actions .btn { min-width: auto; }
         .card-actions .btn-danger { background-color: var(--btn-danger); }
         .modal-checklist { 
-            background: rgba(255,255,255,0.05); 
+            background: rgba(0,0,0,0.02); 
             border-radius: 8px; 
             padding: 16px; 
             margin-bottom: 16px; 
@@ -444,7 +449,7 @@
             border-radius: 4px;
             transition: background 0.2s ease;
         }
-        .checklist-item-text:hover { background: rgba(255, 255, 255, 0.05); }
+        .checklist-item-text:hover { background: rgba(0, 0, 0, 0.05); }
         .checklist-item .action-btn { visibility: hidden; }
         .checklist-item:hover .action-btn { visibility: visible; }
         .checklist-item:active .action-btn { visibility: visible; }
@@ -469,10 +474,22 @@
         }
         
         @media (max-width: 480px) {
-            .top-bar { padding: 12px 12px 10px; gap: 8px; }
-            .board-title { font-size: 1.2em; }
-            .controls { gap: 6px; }
-            .btn { padding: 8px 12px; font-size: 0.85em; min-height: 40px; }
+            .top-bar { 
+                padding: 12px 12px 10px; 
+                gap: 8px; 
+                flex-direction: column;
+                align-items: stretch;
+                justify-content: flex-start;
+            }
+            .board-title { 
+                font-size: 1.1em; 
+                width: 100%;
+                margin-bottom: 8px;
+            }
+            .controls { 
+                gap: 6px;
+                width: 100%;
+            }
             #board-container { padding: 10px; gap: 10px; }
             .list-wrapper { 
                 width: 100%; 
