--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            max-height: calc(100vh - 120px);
+            max-height: 80dvh;
             border: 1px solid var(--border-color);
         }
         .list-wrapper.list-dragging { opacity: 0.8; }
